--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "uuid": "https://esm.sh/uuid@^13.0.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0"
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16"
   }
 }
 </script>
